[tool.poetry]
name = "poke_challenge"
version = "0.1.0"
description = "Template for a short API based python challenge"
authors = ["vipierozan99 <victorpierozan@gmail.com>"]
readme = "README.md"
packages = [{include = "poke_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
aiosqlite = "^0.19.0"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
